--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -61,7 +61,9 @@
                                       <object class="GtkLabel" id="label6">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">Column filter</property>
+                                        <property name="label" translatable="yes">Colu_mn filter</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="mnemonic_widget">enColFilter</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
@@ -109,7 +111,9 @@
                                       <object class="GtkLabel" id="label7">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
-                                        <property name="label" translatable="yes">Dir filter</property>
+                                        <property name="label" translatable="yes">_Dir filter</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="mnemonic_widget">enDirFilter</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">0</property>
@@ -161,7 +165,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkCheckButton" id="chk_flattenfolders">
-                                    <property name="label" translatable="yes">_flatten single-child folders, hide empty</property>
+                                    <property name="label" translatable="yes">flatten single-child folders, hide _empty</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="has_default">True</property>
@@ -186,7 +190,9 @@
                               <object class="GtkLabel" id="label2">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Filter</property>
+                                <property name="label" translatable="yes">_Filter</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">enFileFilter</property>
                               </object>
                               <packing>
                                 <property name="tab_fill">False</property>
@@ -198,10 +204,11 @@
                                 <property name="can_focus">False</property>
                                 <child>
                                   <object class="GtkCheckButton" id="chk_xlogarithmic">
-                                    <property name="label" translatable="yes">x logarithmic</property>
+                                    <property name="label" translatable="yes">_x logarithmic</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
+                                    <property name="use_underline">True</property>
                                     <property name="xalign">0</property>
                                     <property name="draw_indicator">True</property>
                                     <signal name="toggled" handler="on_chk_xlogarithmic_toggled" swapped="no"/>
@@ -213,10 +220,11 @@
                                 </child>
                                 <child>
                                   <object class="GtkCheckButton" id="chk_ylogarithmic">
-                                    <property name="label" translatable="yes">y logarithmic</property>
+                                    <property name="label" translatable="yes">_y logarithmic</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
+                                    <property name="use_underline">True</property>
                                     <property name="xalign">0</property>
                                     <property name="draw_indicator">True</property>
                                     <signal name="toggled" handler="on_chk_ylogarithmic_toggled" swapped="no"/>
@@ -264,7 +272,9 @@
                               <object class="GtkLabel" id="label3">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Plot settings</property>
+                                <property name="label" translatable="yes">Plot _options</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">chk_xlogarithmic</property>
                               </object>
                               <packing>
                                 <property name="position">1</property>
@@ -382,11 +392,12 @@
                                     </child>
                                     <child>
                                       <object class="GtkButton" id="btn_plotrc_save">
-                                        <property name="label" translatable="yes">_Save</property>
+                                        <property name="label">gtk-save</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="use_underline">True</property>
+                                        <property name="use_stock">True</property>
                                         <signal name="clicked" handler="on_btn_plotrc_save_clicked" swapped="no"/>
                                       </object>
                                       <packing>
@@ -427,7 +438,9 @@
                               <object class="GtkLabel" id="label4">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes">Plot command</property>
+                                <property name="label" translatable="yes">Plot _command</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">txt_rc</property>
                               </object>
                               <packing>
                                 <property name="position">2</property>
