--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -176,6 +176,21 @@
                                     <property name="position">2</property>
                                   </packing>
                                 </child>
+                                <child>
+                                  <object class="GtkButton" id="btn_EditSelFiles">
+                                    <property name="label" translatable="yes">_Edit selected files in external editor</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">True</property>
+                                    <property name="use_underline">True</property>
+                                    <signal name="clicked" handler="on_btn_EditSelFiles_clicked" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">3</property>
+                                  </packing>
+                                </child>
                               </object>
                               <packing>
                                 <property name="tab_expand">True</property>
@@ -322,14 +337,23 @@
                                     </child>
                                     <child>
                                       <object class="GtkRadioButton" id="rad_plotstyle_rc">
-                                        <property name="label" translatable="yes">plotrc[_name].py</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">False</property>
+                                        <property name="use_underline">True</property>
                                         <property name="xalign">0</property>
                                         <property name="draw_indicator">True</property>
                                         <property name="group">rad_plotstyle_lines</property>
                                         <signal name="toggled" handler="on_plotcommand_toggled" swapped="no"/>
+                                        <child>
+                                          <object class="GtkLabel">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <property name="label" translatable="yes">plotrc[_name].py</property>
+                                            <property name="use_underline">True</property>
+                                            <property name="mnemonic_widget">txt_rc</property>
+                                          </object>
+                                        </child>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
