--- a/plotcommander.glade
+++ b/plotcommander.glade
@@ -514,7 +514,7 @@
                         <property name="can_focus">True</property>
                         <property name="has_default">True</property>
                         <property name="receives_default">False</property>
-                        <property name="tooltip_text" translatable="yes">Flatten single-child folders, hide _empty;
+                        <property name="tooltip_text" translatable="yes">Flatten single-child folders:
 if checked, allows finding files with less clicking; if unchecked, the directory tree behaves more like a usual file browser</property>
                         <property name="use_underline">True</property>
                         <property name="active">True</property>
