--- a/nihilnovi.glade
+++ b/nihilnovi.glade
@@ -474,7 +474,7 @@
                   <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="homogeneous">True</property>
+                    <property name="homogeneous">False</property>
                     <child>
                       <object class="GtkButton" id="btn_EditSelFiles">
                         <property name="label" translatable="yes">Ed_it data</property>
@@ -492,13 +492,13 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="btn_EditSelFiles1">
-                        <property name="label" translatable="yes">Mo_ve data</property>
+                      <object class="GtkButton" id="btn_TrashFiles">
+                        <property name="label" translatable="yes">Trash files</property>
                         <property name="visible">True</property>
-                        <property name="sensitive">False</property>
+                        <property name="sensitive">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="tooltip_text" translatable="yes">Creates a "trash" folder in the same directory as selected files are, and moves them. They can be still accessed there. </property>
+                        <property name="tooltip_text" translatable="yes">Creates a "trash" folder in the same directory as selected files are, and moves them there.</property>
                         <property name="use_underline">True</property>
                         <signal name="clicked" handler="on_btn_TrashSelFiles_clicked" swapped="no"/>
                       </object>
@@ -525,7 +525,7 @@ if checked, allows finding files with less clicking; if unchecked, the directory
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">2</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                     <child>
@@ -542,7 +542,7 @@ if checked, allows finding files with less clicking; if unchecked, the directory
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">3</property>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                   </object>
