--- a/nihilnovi.glade
+++ b/nihilnovi.glade
@@ -509,6 +509,23 @@
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkButton" id="btn_RefreshFolders">
+                        <property name="label" translatable="yes">↺</property>
+                        <property name="visible">True</property>
+                        <property name="sensitive">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Refresh folders</property>
+                        <property name="use_underline">False</property>
+                        <signal name="clicked" handler="on_btn_RefreshFolders_clicked" swapped="no"/>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkCheckButton" id="chk_FlattenFolders">
                         <property name="label" translatable="yes">flatte_n</property>
                         <property name="visible">True</property>
